buildscript {
    repositories {
        maven { url "https://plugins.gradle.org/m2/" }
        mavenCentral()
    }
}

plugins {
    id 'java-library'
}

group = 'org.sv'

subprojects {
    apply plugin: 'java'
    apply plugin: 'java-library'
    apply plugin: 'idea'
    group = 'org.sv'

    configurations {
        mockitoAgent { transitive = false }
    }

    java {
        sourceCompatibility = '17'
        targetCompatibility = '17'
    }

    repositories {
        mavenCentral()
    }

    dependencies {
        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.11.0'
        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.11.0'
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
        testImplementation 'org.mockito:mockito-junit-jupiter:5.11.0'
        testImplementation group: 'org.mockito', name: 'mockito-core', version: '5.14.2'
        mockitoAgent 'org.mockito:mockito-core:5.14.2'
    }
    test {
        useJUnitPlatform()
        jvmArgs += [
                "--add-opens=java.base/java.lang=ALL-UNNAMED",
                "--add-opens=java.base/java.util=ALL-UNNAMED",
                "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
                "-Dnet.bytebuddy.experimental=true",
                "-XX:+EnableDynamicAgentLoading",
                "-javaagent:${configurations.mockitoAgent.asPath}",
                "-Xshare:off"
        ]
    }
}
